--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Web application for Innovation Co-Lab API service.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "webpack-dev-server --port 3001 --history-api-fallback --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
   "author": "Victor Xian Wang <victor.xianwang@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "alt": "^0.18.2",
     "axios": "^0.9.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
@@ -23,7 +24,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.7.2",
-    "babel-loader": "^5.3.3",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "webpack": "^1.12.14",
