--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "alt": "^0.18.2",
     "axios": "^0.9.1",
     "react": "^0.14.7",
+    "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1"
   },
