--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "del": "^2.2.0",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.3",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.3",
+    "gulp-util": "^3.0.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
