--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.3",
     "gulp-util": "^3.0.7",
+    "html-webpack-plugin": "^2.12.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   }
